--- a/app/views/convidado_mailer/usuario_existente_convidado.txt.erb
+++ b/app/views/convidado_mailer/usuario_existente_convidado.txt.erb
@@ -3,6 +3,6 @@ Tienes una invitación de parte de <%= User.find(@convidado.anfitrion_id).name.t
 
 Queremos hacerte participe de la celebración del <%= @convidado.fiesta.nombre.humanize.titleize %>.
 
-Para ver los detalles de la fiesta <%= link_to "Accede al portal", ingresar_url %>.
+Para ver los detalles de la fiesta <%= link_to "Accede al portal", ingresar_url %> y ve a la sección de invitaciones.
 
 Te esperamos y que tengas un buen día!
