--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,102 +20,7 @@
     <![endif]-->
 </head>
 <body>
-  <div id="navbar-main">
-      <!-- Fixed navbar -->
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <% if current_user %>
-        <div class="navbar-header dropdown">
-          <%= link_to "#", class: "navbar-brand hidden-xs hidden-sm dropdown-toggle", data: {toggle: "dropdown"} do %>
-          <span class="fa fa-book" style="font-size:25px; color:#fff;"> La lista</span>
-          <span class="caret"></span>
-          <% end %>
-          <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-            <li role="presentation" class="dropdown-menu-header text-center">Listas de regalos de mis invitaciones</li>
-            <% if current_user.invitaciones.present? %>
-              <% current_user.invitaciones.each do |invitacion| %>
-                <% if invitacion.fiesta.listas.first %>
-                <li><%= link_to invitacion.fiesta.listas.first.nombre, [invitacion.fiesta, invitacion.fiesta.listas.first], role: "menuitem", tabindex: "-1" %>
-                </li>
-                <% else %>
-                <li><%= link_to invitacion.fiesta, role: "menuitem", tabindex: "-1", rel: "tooltip", title: "ver fiesta" do %> <%= invitacion.fiesta.nombre %> no tiene lista de regalos aún<% end %></li>
-                <% end %>
-              <% end %>
-            <% else %>
-              <li class="disabled text-center">Aún no recibes invitaciones.</li>
-            <% end %>
-            <li role="presentation" class="divider"></li>
-            <li role="presentation" class="dropdown-menu-header text-center">Mis Listas de regalos</li>
-            <% if current_user.fiestas.present? %>
-              <% current_user.fiestas.each do |fiesta| %>
-                <% if fiesta.listas.first %>
-                  <li><%= link_to fiesta.listas.first.nombre, [fiesta, fiesta.listas.first], role: "menuitem", tabindex: "-1" %></li>
-                <% else %>
-                  <li><%= link_to fiesta, role: "menuitem", tabindex: "-1", rel: "tooltip", title: "ver fiesta" do %> <%= fiesta.nombre %> no tiene lista de regalos aún<% end %></li>
-                <% end %>
-              <% end %>
-            <% else %>
-              <li role="presentation" class="text-center">
-                <span>No tienes listas aún </span><% if policy(Fiesta.new).create? %>
-                <span><%= link_to new_fiesta_path(@fiesta), class: "btn btn-xs btn-primary", role: "menuitem", tabindex: "-1" do %>
-                agrega tu fiesta <i class="fa  fa-plus-circle"></i> 
-                <% end %></span><% end %>
-              </li>  
-            <% end %>
-          </ul>
-        </div>
-        <% else %>
-        <div class="navbar-header">
-          <%= link_to root_path, class: "navbar-brand hidden-xs hidden-sm" do %>
-          <span class="fa fa-book" style="font-size:25px; color:#fff;"> La lista</span>
-          <% end %>
-        </div>
-        <% end %>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <% if current_user %>
-            <li> <%= link_to fiestas_path do %>
-              <i class="fa fa-ticket"></i> Fiestas
-             <% end %></li>
-            <li> <%= link_to invitaciones_path do %><i class="fa fa-envelope"></i> Invitaciones<% end %></li>
-            <li> <%= link_to regalos_reservados_path do %>
-              <i class="fa fa-gift"></i> Regalos<% end %></li>
-            <% end %>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <% if current_user && current_user.role?(:admin) %>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">funcionalidades en desarrollo<b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">tips para fiestas</a></li>
-                  <li><a href="#">fotos de fiestas organizadas</a></li>
-                  <li><a href="#">to-do list para organizadores</a></li>
-                  <li class="divider"></li>
-                  <li><a href="#">buscador de regalos</a></li>
-                  <li><a href="#">buscador en tiendas</a></li>
-                  <li><a href="#">buscador de proveedores</a></li>
-                  <li class="divider"></li>
-                  <li><a href="#">tienes algún requerimiento especial?</a></li>
-                  <li class="divider"></li>
-
-                </ul>
-            </li>
-            <% end %>
-            <li><div class="user-info">
-            <% if current_user %>
-              Hola <%= link_to (current_user.name || current_user.email), edit_user_registration_path %>! <%= link_to destroy_user_session_path, method: :delete do %>
-               Salir <i class="fa fa-power-off"></i>
-              <% end %>
-            <% else %>
-              <%= link_to "Ya eres miembro? Ingresa", ingresar_path %> 
-            <% end %>
-            </div>
-            </li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
-  </div>
+  <%= render 'layouts/navigation' %>
   <%= yield %>
   <%= render 'layouts/messages' %>
 </body>
