--- a/app/views/fiestas/invitaciones.html.erb
+++ b/app/views/fiestas/invitaciones.html.erb
@@ -22,30 +22,9 @@
           </strong></small></span></div>
           <span><strong><%= link_to Fiesta.find(id).nombre, fiesta_path(Fiesta.find(id)) %></strong></span>
           <span><small>Invita <%= Fiesta.find(id).users.first.email %></small></span>
-          <% if Fiesta.find(id).listas.first %>
+         <!--  <% if Fiesta.find(id).listas.first %>
           <div><%= link_to "ver lista de regalos", fiesta_lista_path(Fiesta.find(id), Fiesta.find(id).listas.first), class: "btn btn-primary btn-xs" %></div>
-          <% end %>
-          <div>
-          <%# if policy(Fiesta.new).update? %>
-          <% if Fiesta.find(id).convidados.where(invitado_id: current_user.id).first.asistencia.nil? %>
-          <span><small>No has confirmado tu presencia </small><%= link_to "confirmar asistencia", fiesta_convidado_confirmar_path(Fiesta.find(id), Fiesta.find(id).convidados.where(invitado_id: current_user.id).first ), class: "btn btn-success btn-xs" %>
-            <%= link_to "declinar asistencia", fiesta_convidado_declinar_path(Fiesta.find(id), Fiesta.find(id).convidados.where(invitado_id: current_user.id).first ), class: "btn btn-danger btn-xs" %>
-          </span>
-          <% else %>
-
-          <% if Fiesta.find(id).convidados.where(invitado_id: current_user.id).first.asistencia == true %>
-          <span>
-          <%= link_to "Asistirás!", "", class: "btn btn-xs btn-success"  %>
-           <%= link_to "cambiar de parecer", fiesta_convidado_declinar_path(Fiesta.find(id), Fiesta.find(id).convidados.where(invitado_id: current_user.id).first ), class: "btn btn-xs btn-default" , data: {confirm: "estas seguro de cancelar tu asistencia?"} %></span>
-          <% else %>
-          <span>
-            <%= link_to "No asistirás", "", class: "btn btn-xs btn-danger"  %>
-            <%= link_to "cambiar de parecer", fiesta_convidado_confirmar_path(Fiesta.find(id), Fiesta.find(id).convidados.where(invitado_id: current_user.id).first ), class: "btn btn-xs btn-default" , data: {confirm: "deseas reconfirmar tu asistencia?"}%>
-          </span>
-          <% end %>
-          <% end %>
-          <%# end %>
-          </div>
+          <% end %> -->
         </div>
         <% end %>
       <% else %>
